samples/_failures_safe/1761515948_c74fe0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3377821a.c:147:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  147 | int matrix
      | ^~~
